fixed spacing of thumbnails

--- a/assets/css/sass/pages/product.scss
+++ b/assets/css/sass/pages/product.scss
@@ -210,6 +210,6 @@
 
 .product-thumbnails {
     img {
-        width: 100px;
+        //width: 100px;
     }
 }
